--- a/Kconfig
+++ b/Kconfig
@@ -21,6 +21,7 @@ source "kexec-tools/Kconfig"
 source "make/Kconfig"
 source "ltp/Kconfig"
 source "tests/Kconfig"
+source "xeno-testsuite/Kconfig"
 
 endmenu
 
