fix rcS when MKR_MOUNT_DEV is null

--- a/base/Makefile
+++ b/base/Makefile
@@ -13,7 +13,7 @@ DIRS= \
 ifeq ($(MKR_MOUNT),)
 mount-dev-sed := \
 	sed -i 's,@MKR_MOUNT_DEV@,\# /dev/null,g' "$(pkginst)/etc/fstab"; \
-	sed -i 's,@MKR_MOUNT_DEV@,\# null,g'  "$(pkginst)/etc/init.d/rcS"; \
+	sed -i 's,@MKR_MOUNT_DEV@,null \#,g'  "$(pkginst)/etc/init.d/rcS"; \
 	sed -i 's,@MKR_MOUNT_DEV@,\# -null,g' "$(pkginst)/etc/mdev.conf"
 else
 mount-dev-sed := \
