--- a/toolchain/Kconfig
+++ b/toolchain/Kconfig
@@ -66,21 +66,13 @@ config CXX
 config ARCH_FLAGS
 	string
 	default "-march=armv4t -msoft-float" if ARM_ARCH = 4
-	default "-march=armv5t -msoft-float" if ARM_ARCH = 5 && !ARM_VFP
-	default "-march=armv5t -mfpu=vfp -mfloat-abi=softfp" if ARM_ARCH = 5 && ARM_VFP
+	default "-march=armv5te -msoft-float" if ARM_ARCH = 5 && !ARM_VFP
+	default "-march=armv5te -mfpu=vfp -mfloat-abi=softfp" if ARM_ARCH = 5 && ARM_VFP
 	default "-march=armv6 -msoft-float" if ARM_ARCH = 6 && !ARM_VFP
 	default "-march=armv6 -mfpu=vfp -mfloat-abi=softfp" if ARM_ARCH = 6 && ARM_VFP
 	default "-march=armv7-a -msoft-float" if ARM_ARCH = 7 && !ARM_VFP
 	default "-march=armv7-a -mfpu=vfp3 -mfloat-abi=softfp" if ARM_ARCH = 7 && ARM_VFP
 	default "-m32" if ARCH_X86_32
-
-config CFLAGS
-	string "Compilation flags"
-	default "$(ARCH_FLAGS) -g -O2"
-
-config LDFLAGS
-	string "Link flags"
-	default "$(ARCH_FLAGS) -g -O2"
 
 if ARCH_ARM
 
@@ -92,6 +84,26 @@ config ARM_ARCH
 config ARM_VFP
 	bool "VFP floating points"
 	default y if ARM_ARCH = 6 || ARM_ARCH = 7
+
+config CFLAGS
+	string "Compilation flags"
+	default "$(ARCH_FLAGS) -g -Os"
+
+config LDFLAGS
+	string "Link flags"
+	default "$(ARCH_FLAGS) -g -Os"
+
+endif
+
+if !ARCH_ARM
+
+config CFLAGS
+	string "Compilation flags"
+	default "$(ARCH_FLAGS) -g -O2"
+
+config LDFLAGS
+	string "Link flags"
+	default "$(ARCH_FLAGS) -g -O2"
 
 endif
 
