provide GDB package

--- a/Kconfig
+++ b/Kconfig
@@ -15,6 +15,8 @@ source "base/Kconfig"
 source "linux/Kconfig"
 source "busybox/Kconfig"
 source "strace/Kconfig"
+source "ncurses/Kconfig"
+source "gdb/Kconfig"
 source "xenomai/Kconfig"
 source "netcat/Kconfig"
 source "kexec-tools/Kconfig"
