provide FUSE package
We need this for supporting the registry over 3.x (forge).

--- a/Kconfig
+++ b/Kconfig
@@ -17,6 +17,7 @@ source "busybox/Kconfig"
 source "strace/Kconfig"
 source "ncurses/Kconfig"
 source "gdb/Kconfig"
+source "fuse/Kconfig"
 source "xenomai/Kconfig"
 source "netcat/Kconfig"
 source "kexec-tools/Kconfig"
