--- a/xenomai/Kconfig
+++ b/xenomai/Kconfig
@@ -137,8 +137,8 @@ config XENO_TESTDIR
 
 if XENO_KERNEL && (ARCH_X86_32 || ARCH_X86_64)
 
-config XENO_X86_SEP
-       bool "Use x86 SEP instructions in Xenomai libraries"
+config XENO_X86_VSYSCALL
+       bool "Use vsyscall support in Xenomai libraries"
        default y
 
 config XENO_X86_TSC
@@ -192,24 +192,17 @@ config XENO_FORGE_MONOTONIC_RAW
 config XENO_FORGE_REGISTRY
        bool "Enable export of real-time objects to a registry"
 
-config XENO_FORGE_PSHARED
-       bool "Enable shared multi-processing"
-
-if XENO_MERCURY
-
-config XENO_MERCURY_LORES_CLOCK
+config XENO_FORGE_LORES_CLOCK
        bool "Enable low resolution clock"
 
-config XENO_MERCURY_ASSERT
+config XENO_FORGE_ASSERT
        bool "Enable run-time assertions"
 
-config XENO_MERCURY_ASYNC_CANCEL
+config XENO_FORGE_ASYNC_CANCEL
        bool "Enable asynchronous cancellation"
 
-config XENO_MERCURY_PSHARED
+config XENO_FORGE_PSHARED
        bool "Enable shared multi-processing for capable skins"
-
-endif
 
 endif
 
