--- a/Kconfig
+++ b/Kconfig
@@ -21,6 +21,7 @@ source "fuse/Kconfig"
 source "xenomai/Kconfig"
 source "netcat/Kconfig"
 source "kexec-tools/Kconfig"
+source "valgrind/Kconfig"
 source "make/Kconfig"
 source "ltp/Kconfig"
 source "tests/Kconfig"
