fuse: check whether CONFIG_FUSE_FS is enabled

--- a/fuse/Makefile
+++ b/fuse/Makefile
@@ -9,3 +9,9 @@ configure-args-y += --with-shared --disable-example
 rootfs: default-rootfs
 
 clean: default-clean
+
+confcheck-y += $(call confcheck-if, \
+	test -z "$(CONFIG_FUSE_FS)", \
+	Fuse needs CONFIG_FUSE_FS in kernel configuration)
+
+confcheck: default-confcheck
